# as_assignments

assignment_1/random_walk/: CMakeLists.txt  package.xml
assignment_1/random_walk/src/: random_walk.cpp
assignment_2/bayes_filter/: CMakeLists.txt  package.xml
assignment_2/bayes_filter/src/: bayes_filter.cpp
assignment_2/bayes_world/: CMakeLists.txt  bayes_world.launch  config.rviz  manifest.xml  package.xml
assignment_2/controller/: CMakeLists.txt  controller.py  package.xml
assignment_2/laser_to_wall/: CMakeLists.txt  package.xml  run.py
assignment_2/stage_ros/src/: stageros.cpp
assignment_3/occupancy_grid_utils/: .CMakeLists.txt.swp  CMakeLists.txt  package.xml
assignment_3/occupancy_grid_utils/src/: combine_grids.cpp  ray_tracer.cpp
assignment_3/particle_filter/: .CMakeLists.txt.swp  CMakeLists.txt  package.xml
assignment_3/particle_filter/src/: MCL_node.cpp  MCLocaliser.cpp  MCLocaliser.hpp  ParticleFilter.cpp  ParticleFilter.hpp
assignment_3/particle_world/: config.rviz  particlefilter_swarmlab.launch  particlefilter_willow.launch
