<package>
  <name>controller</name>
  <version>1.0.0</version>
  <description>

     controller

  </description>
  <author>turtlebot</author>
  <maintainer email="texas@ranger.me">Chuck Norris</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/controller</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

</package>


