<?xml version="1.0"?>
<package>
  <name>laser_to_wall</name>
  <version>1.0.0</version>
  <description>laser_to_wall</description>
  <author>Swarmlab</author>
  <maintainer email="texas@ranger.me">Chuck Norris</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/laser_to_wall</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
</package>


